# ros_pythonic

./: README.md
src/: CMakeLists.txt  package.xml
src/scripts/: example.py  ros_pythonic.py
