<?xml version="1.0"?>
<package format="2">
  <name>ros_pythonic</name>
  <version>0.0.1</version>
  <description>A pythonic wrapper for the communication in ROS.</description>

  <author email="boehle@gmail.com">Sebastian Boehle</author>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roslaunch</depend>
</package>
